--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@svgr/cli": "^6.5.0",
