--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.0",
+    "@sendgrid/mail": "^7.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,9 +21,16 @@
     "@svgr/cli": "^6.5.0",
     "@svgr/webpack": "^6.5.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.26.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.18",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.2.1"
   }
 }
