--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@next/font": "^13.0.0",
     "@sendgrid/mail": "^7.7.0",
+    "framer-motion": "^7.6.17",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
