--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@next/font": "^13.0.0",
+    "@react-three/fiber": "^8.9.1",
     "@sendgrid/mail": "^7.7.0",
     "framer-motion": "^7.6.17",
     "next": "12.3.1",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.1",
+    "react-spring": "^9.6.1",
+    "three": "^0.147.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -34,5 +38,6 @@
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "tailwindcss": "^3.2.1"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
