--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next/font": "^13.0.0",
     "@react-three/fiber": "^8.9.1",
     "@sendgrid/mail": "^7.7.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.0.0-rc19",
     "framer-motion": "^7.6.17",
     "next": "12.3.1",
     "next-transpile-modules": "^10.0.0",
@@ -19,7 +21,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-spring": "^9.6.1",
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.3.0",
     "three": "^0.147.0",
     "uuid": "^9.0.0"
   },
@@ -27,6 +32,7 @@
     "@svgr/cli": "^6.5.0",
     "@svgr/webpack": "^6.5.0",
     "autoprefixer": "^10.4.12",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.3.1",
