--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "tailwindcss": "^3.2.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
