--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
     "three": "^0.147.0",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
