--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "nprogress": "^0.2.0"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
